--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  dio: ^5.4.0
+   # A declarative router for Flutter based on Navigation 2 supporting 
+  # deep linking, data-driven routes and more
+  go_router: ^12.1.3
+  # A predictable state management library that helps implement the 
+  # BLoC (Business Logic Component) design pattern.
+  bloc: ^8.1.2
+  # Classes and helper functions that support JSON code generation via 
+  #   the `json_serializable` package.
+  json_annotation: ^4.8.1
+  # Lightweight and blazing fast key-value database written in pure Dart. 
+  # Strongly encrypted using AES-256.
+  hive: ^2.2.3
+  # Extension for Hive. Makes it easier to use Hive in Flutter apps.
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.7
+  build: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +63,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  # Automatically generate code for converting to and from JSON by annotating 
+  # Dart classes.
+  json_serializable: ^6.7.1
+  # A build system for Dart code generation and modular compilation.
+  # A Dart mock library which simplifies mocking with null safety support and 
+  # no manual mocks or code generation.
+  mocktail: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
